# Alas-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  build-debug.sh  build-release.sh  build.bat  build.sh  copy-assets.bat  imgui.ini  install-script.iss
AlasCore/: Alas.h  CMakeLists.txt  Core.h
AlasCore/Game/: CMakeLists.txt  Game.cpp  Game.h
AlasCore/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  GameLoop.cpp  GameLoop.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseCodes.h  OrthCamera.cpp  OrthCamera.h  Time.cpp  Time.h  Window.cpp  Window.h  WindowManager.h  precompiled.h
AlasCore/src/Core/Renderer/: BufferLayout.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.h  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
AlasCore/src/Entity/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneSerialization.cpp  SceneSerialization.h  ScriptableEntity.h
AlasCore/src/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
AlasCore/src/GameObject/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
AlasCore/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
AlasCore/src/Platform/OpenGL/: OpenGLContex.cpp  OpenGLContext.h  OpenGLCore.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTextRendering.cpp  OpenGLTextRendering.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
AlasCore/src/Platform/SDL/: SDLInput.cpp  SDLInput.h  SDLWindow.cpp  SDLWindow.h
AlasCore/src/Renderer/: BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  OrthCamera.cpp  OrthCamera.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  TextRendering.cpp  TextRendering.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
AlasCore/src/Resources/: ResourceManager.cpp  ResourceManager.h
AlasCore/src/Scripting/lua/: LuaComponents.h  LuaRegister.cpp  LuaRegister.h  LuaScriptHandle.cpp  LuaScriptHandle.h  ScriptingEngine.cpp  ScriptingEngine.h
AlasCore/src/Utils/: Profiler.h
EntryPoint/: CMakeLists.txt  CustomGameObject.h  SandboxApp.cpp
EntryPoint/Assets/: k.yaml  main.yaml  main2.yaml  t.yaml  t1.yaml  test.yaml
EntryPoint/Assets/Scripts/: main-go copy.lua  main-go.lua  main-test.lua  test.lua
EntryPoint/Assets/Scripts/alas/: yarik.lua
EntryPoint/Assets/Shaders/: BaseShader.shader  DebugLineShader.shader  Line.shader  OverlayText.shader  Text.shader  Texture.shader  TextureShader.shader  WorldSpaceText.shader  text-init.shader
EntryPoint/CustomScripts/: SnakeTIle.h  Triangle.h
MiscScripts/: build-debug.bat  build-debug.sh  imgui.ini
